--- a/package.json
+++ b/package.json
@@ -7,10 +7,13 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "firebase": "^8.4.1",
+    "nanoid": "^3.1.22",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.3.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "register": "^0.0.0",
     "styled-components": "^5.2.3",
     "styled-reset": "^4.3.4",
     "web-vitals": "^1.0.1"
